added query parameters on request
